--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<title>刀客简易图床</title>
-<meta name="keywords" content="刀客简易图床">
+<title>浅忆图床</title>
+<meta name="keywords" content="浅忆图床">
 <meta name="description" content="一款简约图床,使用本地存储，再也不用担心文件丢失了！">
 <link rel="icon" href="favicon.ico" type="image/ico">
 <link rel="stylesheet" href="css/style.css">
