--- a/index.html
+++ b/index.html
@@ -31,5 +31,14 @@
 <script src='js/gsap.min.js'></script>
 <script src="js/script.js"></script>
 
+
+<form action="/api/upload" method="post" enctype="multipart/form-data">
+
+  <input type="file" name="file">
+  
+  <button type="submit">上传</button>
+
+</form>  
+  
 </body>
 </html>
