--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script src="js/script.js"></script>
 
 
-<form action="/api/upload" method="post" enctype="multipart/form-data">
+<form action="/api/upimg" method="post" enctype="multipart/form-data">
 
   <input type="file" name="file">
   
